# Super-Textagon

./: .gitignore  CMakeLists.txt  readme.md
.github/: semantic.yaml
.github/workflows/: static_analysis.yaml
.music/: Music.MMM
assets/web/: index.html
enc_temp_folder/1d9e331d327d3b811252195c915c2a42/: collisionSystem.cpp
engine/: CMakeLists.txt
engine/include/engine/: common.h  ecs.h  engine.h  entity.h
engine/include/engine/comp/: _basicComponent.h  _propertyComponent.h  _uniqueComponent.h  audio.h  audioComponent.h  collider.h  colliderComponent.h  depth.h  gravityComponent.h  name.h  nameComponent.h  script.h  scriptComponent.h  sprite.h  spriteComponent.h  tag.h  text.h  timer.h  timerComponent.h  transform.h  transformComponent.h  velocityComponent.h
engine/include/engine/components/: gravityComponent.h  scriptComponent.h  spriteComponent.h  transformComponent.h
engine/include/engine/sys/: __oof.h  _system.h  audioSystem.h  cameraSystem.h  collisionSystem.h  entityUpdateSystem.h  input.h  renderSystem.h  spriteSystem.h  timeSystem.h  transformSystem.h
engine/include/engine/systems/: _system.h  input.h  renderSystem.h  spriteSystem.h  timeSystem.h  transformSystem.h
engine/src/engine/: ecs.cpp  engine.cpp  entity.cpp
engine/src/engine/comp/: audio.cpp  audioComponent.cpp  collider.cpp  colliderComponent.cpp  depth.cpp  gravityComponent.cpp  name.cpp  nameComponent.cpp  script.cpp  scriptComponent.cpp  sprite.cpp  spriteComponent.cpp  tag.cpp  text.cpp  timer.cpp  timerComponent.cpp  transform.cpp
engine/src/engine/components/: gravityComponent.cpp  scriptComponent.cpp  spriteComponent.cpp
engine/src/engine/sys/: __oof.cpp  audioSystem.cpp  cameraSystem.cpp  collisionSystem.cpp  entityUpdateSystem.cpp  input.cpp  renderSystem.cpp  spriteSystem.cpp  timeSystem.cpp  transformSystem.cpp
engine/src/engine/systems/: input.cpp  renderSystem.cpp  spriteSystem.cpp  timeSystem.cpp  transformSystem.cpp
src/: common.h  debug.h  debug.hpp  ecs.cpp  ecs.h  ecs.hpp  global.cpp  global.h  helper.cpp  helper.h  input.cpp  input.h  input.hpp  main.cpp
src/_ecs/: ecs.cpp  ecs.hpp
src/components/: _component.hpp  gravityComponent.h  scriptComponent.h  spriteComponent.cpp  spriteComponent.h  spriteComponent.hpp  transformComponent.h
src/engine/: ecs.cpp  ecs.h
src/engine/components/: gravityComponent.cpp  gravityComponent.h  scriptComponent.cpp  scriptComponent.h  spriteComponent.h
src/engine/entities/: _entity.h
src/engine/systems/: spriteSystem.h  timeSystem.cpp  timeSystem.h  transformSystem.cpp
src/entities/: _entity.cpp  _entity.h  _entity.hpp  _testEntity.cpp  _testEntity.h  background.cpp  background.h  core.cpp  core.h  flash.cpp  flash.h  gameOver.cpp  gameOver.h  gui.cpp  gui.h  musicController.cpp  musicController.h  player.cpp  player.h  scoreTracker.cpp  scoreTracker.h  testEntity.cpp  testEntity.h  testEntity.hpp  wall.cpp  wall.h  wallGenerator.cpp  wallGenerator.h
src/icon/: Super_Textagon.rc  resource.h
src/systems/: ____OLD_SPRITE_CODE.cpp  _system.cpp  _system.h  _system.hpp  debugSystem.hpp  input.cpp  input.h  renderSystem.cpp  renderSystem.h  renderSystem.hpp  spriteSystem.cpp  spriteSystem.h  transformSystem.h
